# scaffolding

apps/electron/: README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
apps/electron/src/renderer/src/: App.svelte
apps/electron/src/renderer/src/assets/: base.css  main.css
apps/flask_svelte/: Makefile
apps/flask_svelte/client/: package.json
apps/flask_svelte/client/src/: App.svelte  main.js
apps/flask_svelte/server/: .gitignore
apps/flask_svelte/server/server/main/: routes.py
flask/: .gitignore  Makefile
node/ts/: package.json  tsconfig.json
node/ts/src/: index.ts
server/flask/: .flaskenv  Makefile  app.py  pyproject.toml  requirements.txt
server/flask/server/: __init__.py
server/flask/server/main/: __init__.py  routes.py
server/tsc/: .gitignore  package.json
server/tsc/src/: server.ts
vite.svelte.tailwind.flowbite/: package-lock.json
web.ui/vite.svelte.tailwind/: package-lock.json  package.json
web.ui/vite.svelte.tailwind.flowbite/: package.json
web.ui/vite.svelte.tailwind/src/: main.js.map
